# gryag-2.0

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  example-prompt.md  logs.txt  pyproject.toml
.cursor/rules/: derived-cursor-rules.mdc
.specstory/history/: 2026-01-04_20-15Z-comprehensive-repository-documentation.md  2026-01-04_21-03Z-chatbot-memory-and-tool-failures.md
bot/: __init__.py  config.py  main.py
bot/cache/: __init__.py  redis.py
bot/context/: __init__.py  immediate.py  manager.py  permanent.py  scheduler.py  summarizer.py
bot/db/: __init__.py  models.py  session.py
bot/handlers/: __init__.py  admin.py  base.py  commands.py  group.py  private.py
bot/llm/: __init__.py  client.py  models.py
bot/middlewares/: __init__.py  access_control.py  logging.py  rate_limit.py
bot/tools/: __init__.py  base.py  calculator.py  image.py  memory.py  registry.py  search.py  weather.py
bot/utils/: __init__.py  commands.py  errors.py  formatting.py  logging.py  triggers.py
docs/en/: README.md  admin.md  api-reference.md  architecture.md  configuration.md  context-management.md  database.md  deployment.md  development.md  prompts.md  tools.md  troubleshooting.md
docs/uk/: README.md  admin.md  api-reference.md  architecture.md  configuration.md  context-management.md  database.md  deployment.md  development.md  prompts.md  tools.md  troubleshooting.md
migrations/: env.py
migrations/versions/: .gitkeep
prompts/: assistant.md  casual.md  default.md
tests/: conftest.py
tests/test_tools/: test_calculator.py
(+6 files in other folders)
